Adding `root_handle` filter
